--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
 	"compilerOptions": {
 		"outDir": "dist/js",
 		"target": "ES6",
+		"removeComments": true,
+		"strictNullChecks": true,
 		"noEmitOnError": true,
 		"noImplicitAny": true
 	},
